--- a/TinyOAL/TinyOAL.vcxproj
+++ b/TinyOAL/TinyOAL.vcxproj
@@ -190,31 +190,27 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="aldlist.cpp" />
     <ClCompile Include="cAudio.cpp" />
     <ClCompile Include="cAudioResource.cpp" />
     <ClCompile Include="cAudioResourceMP3.cpp" />
     <ClCompile Include="cAudioResourceOGG.cpp" />
     <ClCompile Include="cAudioResourceWAV.cpp" />
-    <ClCompile Include="cDataStream.cpp" />
     <ClCompile Include="cMp3Functions.cpp" />
     <ClCompile Include="cOggFunctions.cpp" />
     <ClCompile Include="cTinyOAL.cpp" />
-    <ClCompile Include="CWaves.cpp" />
+    <ClCompile Include="cWaveFunctions.cpp" />
     <ClCompile Include="LoadOAL.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cAudioResourceMP3.h" />
     <ClInclude Include="cAudioResourceOGG.h" />
     <ClInclude Include="cAudioResourceWAV.h" />
-    <ClInclude Include="cDataStream.h" />
     <ClInclude Include="cMp3Functions.h" />
     <ClInclude Include="cOggFunctions.h" />
-    <ClInclude Include="TinyOALdef.h" />
+    <ClInclude Include="cWaveFunctions.h" />
     <ClInclude Include="..\include\cAudio.h" />
     <ClInclude Include="..\include\cAudioResource.h" />
     <ClInclude Include="..\include\cTinyOAL.h" />
-    <ClInclude Include="..\include\TinyOAL.h" />
     <ClInclude Include="..\include\TinyOAL_dlldef.h" />
   </ItemGroup>
   <ItemGroup>
