--- a/examples/06Managed/06Managed.csproj
+++ b/examples/06Managed/06Managed.csproj
@@ -7,13 +7,14 @@
     <ProjectGuid>{15D93BEF-2F4E-4CAB-92B0-373E70072681}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_05Managed</RootNamespace>
+    <RootNamespace>_06Managed</RootNamespace>
     <AssemblyName>05Managed</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -31,6 +32,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>_06Managed.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -40,8 +45,8 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TinyOAL_Net_d">
-      <HintPath>..\..\bin\TinyOAL_Net_d.dll</HintPath>
+    <Reference Include="TinyOAL_Net">
+      <HintPath>..\..\bin\TinyOAL_Net.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
